[package]
name = "did-wk"
version = "0.1.0"
description = "`did-wk` is a library for working with DID-Web-Key and DID-Key decentralized identifiers (DIDs) methods."
authors = ["Team MicroSandbox <team@microsandbox.dev>"]
repository = "https://github.com/microsandbox/monobase"
license = "Apache-2.0"
edition = "2021"

[lib]
name = "did_wk"
path = "lib/lib.rs"

[dependencies]
